--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -64,7 +64,15 @@
 		"@sample-stack/microservice-nats": "*",
 		"@sample-stack/utils": "*",
 		"@sample-stack/counter": "*",
+		"apollo-datasource-rest": "^2.0.0-rc.8",
+		"apollo-engine": "^1.1.2",
+		"apollo-errors": "^1.9.0",
 		"apollo-link": "^1.2.3",
+		"apollo-link-batch-http": "^1.2.3",
+		"apollo-link-context": "^1.0.9",
+		"apollo-link-error": "^1.1.1",
+		"apollo-link-http": "^1.5.5",
+		"apollo-link-ws": "^1.0.8",
 		"apollo-logger": "^0.3.0",
 		"app-root-path": "^2.0.1",
 		"body-parser": "^1.18.3",
@@ -88,6 +96,7 @@
 		"reflect-metadata": "^0.1.12",
 		"sqlite3": "^3.1.13",
 		"subscriptions-transport-ws": "^0.9.9",
+		"universal-cookie-express": "^3.0.4",
 		"ws": "^3.3.3"
 	},
 	"devDependencies": {
