--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -85,6 +85,7 @@
 		"apollo-server-express": "^2.0.7",
 		"graphql-subscriptions": "^0.5.8",
 		"graphql-tools": "^3.1.1",
+		"hemera-plugin": "0.1.2",
 		"inversify": "^4.13.0",
 		"isomorphic-fetch": "^2.2.1",
 		"knex": "^0.14.4",
