--- a/package.json
+++ b/package.json
@@ -282,6 +282,7 @@
     "fela-preset-web": "^8.0.8",
     "graphql": "^0.13.2",
     "graphql-iso-date": "^3.6.1",
+    "graphql-subscriptions": "^1.0.0",
     "graphql-nats-subscriptions": "^1.3.0",
     "graphql-playground-middleware-express": "^1.7.3",
     "graphql-tools": "^4.0.3",
