--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -81,6 +81,7 @@
 		"express": "^4.16.3",
 		"graphql": "^0.13.2",
 		"graphql-nats-subscriptions": "^1.3.0",
+		"graphql-subscriptions": "^1.0.0",
 		"apollo-server-express": "^2.2.0",
 		"graphql-tools": "^4.0.3",
 		"hemera-plugin": "0.1.2",
