--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -94,6 +94,8 @@
 		"nats": "^0.8.4",
 		"nats-hemera": "^3.5.1",
 		"reflect-metadata": "^0.1.12",
+		"rxjs": "^6.3.3",
+		"rxjs-compat": "^6.3.3",
 		"sqlite3": "^3.1.13",
 		"subscriptions-transport-ws": "^0.9.15",
 		"universal-cookie-express": "^3.0.4",
