--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -95,6 +95,7 @@
 		"fela-plugin-validator": "^5.2.0",
 		"fela-preset-web": "^8.0.8",
 		"graphql": "^0.13.2",
+		"graphql-tag": "^2.10.0",
 		"immutability-helper": "^2.6.6",
 		"inversify": "^4.13.0",
 		"isomorphic-fetch": "^2.2.1",
