--- a/package.json
+++ b/package.json
@@ -32,27 +32,26 @@
     "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "db:seed": "yarn db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
+    "predevpublish": "git checkout devpublish && git pull origin devpublish && git merge -s recursive -X theirs develop -m 'merge from develop' && node tools/update-dependency-version.js",
+    "devpublish": "lerna publish prerelease --ignore-scripts",
+    "postdevpublish": "git checkout develop",
+    "devpublish:auto": "yarn devpublish -- --yes",
+    "devpublish:force": "yarn devpublish:forceManual -- --yes",
+    "devpublish:forceManual": "yarn devpublish -- --force-publish=*",
+    "devpublish:push": "yarn predevpublish && git push origin devpublish && yarn postdevpublish",
     "generateGraphql": "graphql-codegen",
     "generateGraphql:watch": "yarn generateGraphql -- --watch",
     "jest": "./node_modules/.bin/jest",
     "lerna": "lerna bootstrap --hoist",
-    "predevpublish": "git checkout devpublish && git pull origin devpublish && git merge -s recursive -X theirs develop -m 'merge from develop' && node tools/update-dependency-version.js",
-    "devpublish": "lerna publish prerelease --ignore-scripts",
-    "devpublish:auto": "yarn devpublish -- --yes",
-    "devpublish:push": "yarn predevpublish && git push origin devpublish && yarn postdevpublish",
-    "devpublish:force": "yarn devpublish:forceManual -- --yes",
-    "devpublish:forceManual": "yarn devpublish -- --force-publish=*",
-    "postdevpublish": "git checkout develop",
-    "watch-packages": "lerna exec --no-sort  --scope @sample-stack/platform* --scope @sample-stack/react-shared-components --scope @sample-stack/core --stream --parallel 'webpack --watch'",
     "prelernapublish": "git checkout publish && git merge -s recursive -X theirs master",
     "lernapublish": "lerna publish --ignore-scripts --cd-version=patch",
     "postlernapublish": "git checkout master",
-    "publish": "yarn lernapublish",
-    "publish:force": "yarn lernapublish -- --force-publish=*",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "postbootstrap": "yarn build",
     "prebootstrap": "lerna run prepare",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
+    "publish": "yarn lernapublish",
+    "publish:force": "yarn lernapublish -- --force-publish=*",
     "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env yarn zen:watch",
     "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env yarn zen:watch",
     "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch",
@@ -63,10 +62,14 @@
     "travis": "istanbul cover -x \"*.test.js\" _mocha -- --timeout 5000 --full-trace ./test/tests.js",
     "posttravis": "yarn lint",
     "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
+    "watch-packages": "lerna exec --no-sort  --scope @sample-stack/platform* --scope @sample-stack/react-shared-components --scope @sample-stack/core --stream --parallel 'webpack --watch'",
     "zen:build": "cross-env NODE_ENV=production zen build",
     "zen:exp": "zen exp",
     "zen:watch": "zen  watch -x",
     "zen:watch:debug": "yarn zen:watch -- -v"
+  },
+  "resolutions": {
+    "chokidar": "^3.4.0"
   },
   "dependencies": {
     "@sample-stack/core": "file:packages/sample-core",
@@ -180,6 +183,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.20.0",
+    "husky": "^5.0.9",
     "ignore-loader": "^0.1.2",
     "image-size": "^0.8.3",
     "ip": "^1.1.5",
@@ -265,9 +269,6 @@
     "webpack-virtual-modules": "^0.2.1",
     "webpack-visualizer-plugin": "^0.1.11",
     "ws": "^7.2.1"
-  },
-  "resolutions": {
-    "chokidar": "^3.4.0"
   },
   "engines": {
     "node": ">=10.15.3 < 14.0.0",
