--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -35,7 +35,6 @@
   "dependencies": {
     "@cdm-logger/client": "^5.0.7",
     "@cdm-logger/server": "^6.0.0",
-    "@cdmbase/graphql-type-uri": "^0.4.1",
     "@common-stack/client-core": "0.0.251",
     "@common-stack/core": "0.0.251",
     "@common-stack/server-core": "0.0.251",
@@ -47,7 +46,7 @@
     "apollo-server-cache-memcached": "^0.6.7",
     "apollo-server-cache-redis": "^1.2.3",
     "apollo-server-caching": "^0.5.3",
-    "apollo-server-errors": "^3.0.0-alpha.3",
+    "apollo-server-errors": "^2.4.2",
     "dotenv": "^8.2.0",
     "envalid": "6.0.1",
     "esm": "^3.2.25",
