--- a/package.json
+++ b/package.json
@@ -169,7 +169,7 @@
     "csstype": "^2.5.5",
     "dotenv-safe": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
-    "envalid": "6.0.1",
+    "envalid": "^7.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
