--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -65,7 +65,7 @@
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
-    "envalid": "6.0.1",
+    "envalid": "^7.0.0",
     "fela": "11.0.2",
     "fela-beautifier": "^11.0.2",
     "fela-dom": "11.0.2",
