--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -48,7 +48,7 @@
     "apollo-server-caching": "^0.5.3",
     "apollo-server-errors": "^2.4.2",
     "dotenv": "^8.2.0",
-    "envalid": "6.0.1",
+    "envalid": "^7.0.0",
     "esm": "^3.2.25",
     "graphql": "^14.7.0",
     "graphql-bigint": "^1.0.0",
